Added Meta and Title tags to btc and paypal checkout pages

--- a/xchangebuddy/templates/btc.html
+++ b/xchangebuddy/templates/btc.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block title %}Buy Bitcoin | Xchangebuddy{% endblock %}
+{% block meta_description%}Buy Bitcoin in Nigeria and sell PayPal Credit{% endblock %}
+
 {% block content %}
 
  <div class="site-section bg-image2 overlay" id="contact-section" style="background-image: url(/static/xchangebuddy/images/blockchain-3440455_1280.jpg?{% now 'U' %});">
