--- a/xchangebuddy/templates/paypal.html
+++ b/xchangebuddy/templates/paypal.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block title %}Sell PayPal Credit | Xchangebuddy{% endblock %}
+{% block meta_description%}Buy Bitcoin in Nigeria and sell PayPal Credit{% endblock %}
 
 {% block content %}
 
